<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"

        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/vogue_topLay"
                android:paddingTop="10dp"
                android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/vogue_amountTil"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/amount"
                        android:id="@+id/vogue_amountTV"
                        android:inputType="numberDecimal"
                        android:layout_marginBottom="10dp"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/vogue_emailTil"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:hint="@string/email"
                        android:id="@+id/vogue_emailTv"
                        android:inputType="textEmailAddress"
                        android:layout_marginBottom="10dp"
                />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/vogue_cardNoTil"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content">

                <android.voguepay.ng.voguepaysdk2.view.card.CreditCardView
                        android:hint="@string/card_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/vogue_cardNoTv"
                        android:layout_gravity="center"/>

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/vogue_cvvExpLay"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dip"
                        android:id="@+id/vogue_cardExpiryTil"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/expiration"
                            android:paddingEnd="50dp"
                            android:paddingStart="50dp"
                            android:id="@+id/vogue_cardExpiryTv"
                            android:inputType="number"
                            android:maxLength="5"
                            android:layout_marginBottom="10dp"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dip"
                        android:id="@+id/vogue_cvvTil"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cvc_cvv2"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:id="@+id/vogue_cvvTv"
                            android:imeOptions="actionDone"
                            android:layout_marginBottom="10dp"
                    />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/save_card"
                    android:id="@+id/vogue_saveCardSwitch"
            />


            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay"
                    style="?PayButtonStyle"
                    android:id="@+id/vogue_payButton"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="10dp"
            />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#E5E5E5"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
            />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_saved_card"
                    android:id="@+id/vogue_savedCardButton"
                    style="?SavedCardButtonStyle"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="35dp"
                    android:layout_marginLeft="10dp"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text="@string/powered_by"
                    android:textSize="10sp"
                    android:drawablePadding="5dp"

            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:drawablePadding="5dp"
                    android:id="@+id/vogue_pcidss_compliant_tv"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:layout_gravity="center"
                    android:text="@string/pci_dss_compliant"/>


        </LinearLayout>

    </ScrollView>

</FrameLayout>

